mise en place de la section description

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h2>DESCRIPTION</h2>
+
+    <p> Etudiant en 2ème année de lience professionnelle, je suis également titulaire d'une lience en Maarketing option Commerce Internationnal. 
+    Je suis passionné par le hacking et tout ce qui touche à la cyber sécurité.</p>
 </body>
 </html>
