mise en place de la section formations

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <title>Document</title>
 </head>
 <body>
+    <h2>FORMATIONS</h2>
+    
+    <p>- 2021-2022 : Etude en 2ème année de licence professionnelle - ESGIS (BENIN)</p>
+    <p>- 2020-2021 : Etude en 1ère année de licence professionnelle - ESGIS (BENIN)</p>
+    <p>- 2021-2022 : Licence professionnelle en Marketing option Commerce Internationnal - ENEAM (BENIN)</p>
     
 </body>
 </html>
