mise en place de la section competences

--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
     <title>Document</title>
 </head>
 <body>
+    <h2>FORMATIONS</h2>
     
+    <p>- 2021-2022 : Etude en 2ème année de licence professionnelle - ESGIS (BENIN)</p>
+    <p>- 2020-2021 : Etude en 1ère année de licence professionnelle - ESGIS (BENIN)</p>
+    <p>- 2021-2022 : Licence professionnelle en Marketing option Commerce Internationnal - ENEAM (BENIN)</p>
+    
+    <h2>COMPETENCES</h2>
+    <p>- Piratage d'un téléphone avec Métasploit ;</p>
+    <p>- Création d'un Rootkit ;</p>
+    <p>- Création d'un keylogger ;</p>
+    <p>- Optimisation et optimisation de site internet SEO ;</p>
+    <p>- Rédaction d'articles web optimisés SEO ;</p>
+
+
 </body>
 </html>
