mise en place de la section associations

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <title>Document</title>
 </head>
 <body>
-    
+   <h2>ASSOCIATIONS</h2>
+   <p>
+    - PLANET ENERGY SYSTEM; 
+   </p> 
+   <p>
+    - ISOCEL
+   </p>
 </body>
 </html>
